# 15712-project

./: .gitignore  CMakeLists.txt  README.md  output.txt  todo.txt
scripts/: bb.py  client.py  generate_trace.py  graph.py  main.py  myfile.txt  osmr.py  run_benchmark.py  unreplicated.py  util.py
src/: .bb_service.cpp.swp  BB.cpp  BB_nodes.cpp  basic_good_node.cpp  basic_good_service.cpp  bb_good_node.cpp  bb_node.cpp  bb_not_responsive_node.cpp  bb_service.cpp  bft_consensus  bft_consensus.cpp  lib.cpp  node.cpp  node.h  pbft_good_node.cpp  pbft_node.cpp  pbft_nodes.cpp  pbft_not_responsive_node.cpp  pbft_service.cpp  pbft_wrong_node.cpp  service.cpp  simulator.cpp
src/include/: basic_bad_node.h  basic_good_node.h  basic_good_service.h  bb_good_node.h  bb_node.h  bb_not_responsive_node.h  bb_service.h  lib.h  node.h  non_replicated_service.hpp  pbft_good_node.h  pbft_node.h  pbft_nodes.h  pbft_not_responsive_node.h  pbft_service.h  pbft_wrong_node.h  service.h
traces/: trace1.txt  trace10.txt  trace100.txt  trace1000.txt
